--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
 addons:
   apt:
     sources:
-      - libcypher-parser: 'ppa:cleishm/neo4j'
+      - sourceline: 'ppa:cleishm/neo4j'
     packages:
       - build-essential
       - libcypher-parser-dev
