--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 dist: trusty
-#sudo: required
-
 language: python
 python:
   - 3.4
@@ -32,6 +30,7 @@ install:
   - pip install -Uq pip setuptools coveralls
 
 script:
+  - python setup.py build_ext --inplace
   - python setup.py test
 
 after_success: coveralls
