- Added *.pyx to MANIFEST and removed *.pxd from `package_data` - Added /usr/local/lib to `library_path` - Bumped version

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include README.md
 include LICENSE
 include requirements.txt
-recursive-include libcypher_parser *.c *.pxd
+recursive-include libcypher_parser *.c *.pxd *.pyx
